--- a/example/src/main/res/layout/activity_main.xml
+++ b/example/src/main/res/layout/activity_main.xml
@@ -1,82 +1,171 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:tools="http://schemas.android.com/tools"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:tools="http://schemas.android.com/tools"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            tools:context=".MainActivity">
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin">
+
+        <TextView
+            android:id="@+id/activity_main_static_textview"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:text="@string/activity_main_static"
+            android:textAllCaps="true"/>
+
+        <TableLayout
+            android:id="@+id/activity_main_tablelayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/activity_main_static_textview"
+            android:stretchColumns="0,1">
+
+            <TableRow>
+
+                <Button
+                    android:id="@+id/activity_main_launch_button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:minWidth="@dimen/material_button_min_width"
+                    android:text="@string/activity_main_launch"/>
+
+                <Button
+                    android:id="@+id/activity_main_playstore_button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:minWidth="@dimen/material_button_min_width"
+                    android:text="@string/activity_main_playstore"/>
+            </TableRow>
+
+            <TableRow>
+
+                <Button
+                    android:id="@+id/activity_main_categories_button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:minWidth="@dimen/material_button_min_width"
+                    android:text="@string/activity_main_categories"/>
+
+                <Button
+                    android:id="@+id/activity_main_explore_button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:minWidth="@dimen/material_button_min_width"
+                    android:text="@string/activity_main_explore"/>
+            </TableRow>
+
+            <TableRow>
+
+                <Button
+                    android:id="@+id/activity_main_feed_button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:minWidth="@dimen/material_button_min_width"
+                    android:text="@string/activity_main_feed"/>
+
+                <Button
+                    android:id="@+id/activity_main_me_button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:minWidth="@dimen/material_button_min_width"
+                    android:text="@string/activity_main_me"/>
+            </TableRow>
+
+            <TableRow>
+
+                <Button
+                    android:id="@+id/activity_main_playlists_button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:minWidth="@dimen/material_button_min_width"
+                    android:text="@string/activity_main_playlists"/>
+
+                <Button
+                    android:id="@+id/activity_main_upload_button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:minWidth="@dimen/material_button_min_width"
+                    android:text="@string/activity_main_upload"/>
+            </TableRow>
+        </TableLayout>
+
+
+        <TextView
+            android:id="@+id/activity_main_dynamic_textview"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/activity_main_tablelayout"
+            android:layout_marginTop="@dimen/activity_vertical_margin"
+            android:text="@string/activity_main_dynamic"
+            android:textAllCaps="true"/>
+
+        <TextView
+            android:id="@+id/activity_main_instructions_textview"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/activity_main_dynamic_textview"
+            android:layout_marginTop="@dimen/activity_vertical_margin"
+            android:text="@string/activity_main_instructions"/>
+
+        <EditText
+            android:id="@+id/activity_main_edittext"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/activity_main_instructions_textview"
+            android:layout_marginTop="@dimen/activity_vertical_margin"
+            android:hint="@string/activity_main_uri_hint"/>
+
+        <RadioGroup
+            android:id="@+id/activity_main_radiogroup"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/activity_main_edittext">
+
+            <RadioButton
+                android:id="@+id/activity_main_video_radiobutton"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:paddingBottom="@dimen/activity_vertical_margin"
-                android:paddingLeft="@dimen/activity_horizontal_margin"
-                android:paddingRight="@dimen/activity_horizontal_margin"
-                android:paddingTop="@dimen/activity_vertical_margin"
-                tools:context=".MainActivity">
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/activity_vertical_margin"
+                android:text="@string/activity_main_type_video"/>
 
-    <TextView
-        android:id="@+id/activity_main_instructions_textview"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:text="@string/activity_main_instructions"/>
+            <RadioButton
+                android:id="@+id/activity_main_category_radiobutton"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/activity_vertical_margin"
+                android:text="@string/activity_main_type_category"/>
 
-    <EditText
-        android:id="@+id/activity_main_edittext"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/activity_main_instructions_textview"
-        android:layout_marginTop="@dimen/activity_vertical_margin"
-        android:hint="@string/activity_main_uri_hint"/>
+            <RadioButton
+                android:id="@+id/activity_main_channel_radiobutton"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/activity_vertical_margin"
+                android:text="@string/activity_main_type_channel"/>
 
-    <RadioGroup
-        android:id="@+id/activity_main_radiogroup"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/activity_main_edittext">
+            <RadioButton
+                android:id="@+id/activity_main_user_radiobutton"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/activity_vertical_margin"
+                android:text="@string/activity_main_type_user"/>
+        </RadioGroup>
 
-        <RadioButton
-            android:id="@+id/activity_main_video_radiobutton"
-            android:layout_width="match_parent"
+        <Button
+            android:id="@+id/activity_main_go_button"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_below="@id/activity_main_radiogroup"
+            android:layout_centerHorizontal="true"
             android:layout_marginTop="@dimen/activity_vertical_margin"
-            android:text="@string/activity_main_type_video"/>
+            android:minWidth="@dimen/material_button_min_width"
+            android:text="@string/activity_main_go"/>
 
-        <RadioButton
-            android:id="@+id/activity_main_category_radiobutton"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/activity_vertical_margin"
-            android:text="@string/activity_main_type_category"/>
-
-        <RadioButton
-            android:id="@+id/activity_main_user_radiobutton"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/activity_vertical_margin"
-            android:text="@string/activity_main_type_user"/>
-    </RadioGroup>
-
-    <Button
-        android:id="@+id/activity_main_go_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/activity_main_radiogroup"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="@dimen/activity_vertical_margin"
-        android:minWidth="@dimen/material_button_min_width"
-        android:text="@string/activity_main_go"/>
-
-    <Button
-        android:id="@+id/activity_main_launch_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:minWidth="@dimen/material_button_min_width"
-        android:text="@string/activity_main_launch"/>
-
-    <Button
-        android:id="@+id/activity_main_playstore_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@id/activity_main_launch_button"
-        android:layout_centerHorizontal="true"
-        android:minWidth="@dimen/material_button_min_width"
-        android:text="@string/activity_main_playstore"/>
-
-</RelativeLayout>
+    </RelativeLayout>
+</ScrollView>
