--- a/example/src/main/res/layout/activity_main.xml
+++ b/example/src/main/res/layout/activity_main.xml
@@ -72,6 +72,13 @@
                 android:text="@string/activity_main_type_user"/>
 
             <RadioButton
+                android:id="@+id/activity_main_vod_radiobutton"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/activity_vertical_margin"
+                android:text="@string/activity_main_type_vod"/>
+
+            <RadioButton
                 android:id="@+id/activity_main_url_radiobutton"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
