--- a/example/src/main/res/layout/activity_main.xml
+++ b/example/src/main/res/layout/activity_main.xml
@@ -166,6 +166,23 @@
             <TableRow>
 
                 <Button
+                    android:id="@+id/activity_main_notification_button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:minWidth="@dimen/material_button_min_width"
+                    android:text="@string/activity_main_notifications"/>
+
+                <Button
+                    android:id="@+id/activity_main_notification_settings_button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:minWidth="@dimen/material_button_min_width"
+                    android:text="@string/activity_main_notification_settings"/>
+            </TableRow>
+
+            <TableRow>
+
+                <Button
                     android:id="@+id/activity_main_playlists_button"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
