--- a/example/src/main/res/layout/activity_main.xml
+++ b/example/src/main/res/layout/activity_main.xml
@@ -222,6 +222,13 @@
                     android:layout_height="wrap_content"
                     android:minWidth="@dimen/material_button_min_width"
                     android:text="@string/activity_main_purchases"/>
+
+                <Button
+                    android:id="@+id/activity_main_upgrade_button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:minWidth="@dimen/material_button_min_width"
+                    android:text="@string/activity_main_upgrade"/>
             </TableRow>
         </TableLayout>
 
