build tools update
and offline support

--- a/example/src/main/res/layout/activity_main.xml
+++ b/example/src/main/res/layout/activity_main.xml
@@ -181,6 +181,12 @@
                 android:text="@string/activity_main_offline" />
 
             <Button
+                android:id="@+id/activity_main_offline_uri_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/activity_main_offline_uri" />
+
+            <Button
                 android:id="@+id/activity_main_watchlater_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
