--- a/example/src/main/res/layout/activity_main.xml
+++ b/example/src/main/res/layout/activity_main.xml
@@ -213,32 +213,35 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
-                <EditText
-                    android:id="@+id/activity_user_id_albums_edit_text"
-                    android:layout_width="100dp"
-                    android:layout_height="wrap_content"
-                    android:text="@string/activity_main_default_user"/>
                 <Button
                     android:id="@+id/activity_main_albums_for_user_button"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/activity_main_albums_for_user" />
+                <EditText
+                    android:id="@+id/activity_user_id_albums_edit_text"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="@dimen/item_separator_margin"
+                    android:text="@string/activity_main_default_user"/>
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
-                <EditText
-                    android:id="@+id/activity_user_id_album_edit_text"
-                    android:layout_width="100dp"
-                    android:layout_height="wrap_content"
-                    android:text="@string/activity_main_default_album_id"/>
                 <Button
                     android:id="@+id/activity_main_album_by_id"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/activity_main_album_for_id" />
+                <EditText
+                    android:id="@+id/activity_user_id_album_edit_text"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="@dimen/item_separator_margin"
+                    android:text="@string/activity_main_default_album_id"/>
+
             </LinearLayout>
 
         </LinearLayout>
