--- a/example/src/main/res/layout/activity_main.xml
+++ b/example/src/main/res/layout/activity_main.xml
@@ -138,6 +138,18 @@
                 android:text="@string/activity_main_explore" />
 
             <Button
+                android:id="@+id/activity_main_watch_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/activity_main_watch" />
+
+            <Button
+                android:id="@+id/activity_main_account_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/activity_main_account" />
+
+            <Button
                 android:id="@+id/activity_main_feed_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
